examples/typechecking/missing_implicit_import.an
import Std.HashMap.HashMap

main () =
    map: HashMap U8 I32 = HashMap.empty ()
    // Error here should suggest importing `hash_u8`
    elem = map.get (ref 4) |> Maybe.unwrap
    println elem

// Found 1 error and 0 warnings

// args: --no-color
// expected exit status: 1
// expected stderr:
// examples/typechecking/missing_implicit_import.an:6:15
// 5 |     // Error here should suggest importing `hash_u8`
//   |     // error: No implicit found for type Hash U8 required by parameter 3 of get
// 6 |     elem = map.get (ref 4) |> Maybe.unwrap
//   |               ^^^^
// 7 |     println elem
//   = note: did you mean to import Std.Hash.hash_u8?
// 
// Found 1 error and 0 warnings

